--- a/index.html
+++ b/index.html
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <!-- Meta tags para SEO e responsividade -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Centro de Compras - As melhores ofertas do Brasil em eletrônicos, moda, casa e mais!">
-  <meta name="keywords" content="ofertas, promoções, compras online, Brasil, descontos">
-  <meta name="robots" content="index, follow">
-  <meta name="google-adsense-account" content="ca-pub-4531749081462125">
+  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
+  <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
+  <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+  <meta property="og:image" content="logos/centrodecompras.jpg">
+  <meta property="og:url" content="https://seu-site.com">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Centro de Compras - Ofertas do Dia">
-  <meta name="twitter:description" content="Encontre as melhores ofertas no maior portal de compras do Brasil!">
-  <meta name="twitter:image" content="logos/logoscentrodecompras.jpeg">
+  <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
+  <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+  <meta name="twitter:image" content="logos/centrodecompras.jpg">
   <title>Centro de Compras - Ofertas do Dia</title>
 
-  <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
-
-  <!-- Recursos otimizados -->
-  <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc9F5z2a/3eO0/5g3d3k9Z6H1f2Y2Z3f4g5h6j7k8l9m0n1p2q3r4t5u6v7x8y9z0==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- Favicons e PWA -->
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc9F5z2a/3eO0/5g3d3k9Z6H1f2Y2Z3f4g5h6j7k8l9m0n1p2q3r4t5u6v7x8y9z0==" crossorigin="anonymous" referrerpolicy="no-referrer">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png">
-  <link rel="manifest" href="logos/site.webmanifest">
 </head>
 <body>
-  <!-- Cabeçalho -->
   <header class="site-header" role="banner">
     <div class="logo-container">
       <a href="index.html" aria-label="Voltar para a página inicial do Centro de Compras">
-        <img src="logos/logoscentrodecompras.jpeg" alt="Logotipo do Centro de Compras" width="150" height="50">
+        <img src="logos/centrodecompras.jpg" alt="Logotipo do Centro de Compras" width="150" height="50" loading="lazy">
       </a>
     </div>
     <div class="header-text">
       <h1>Centro de Compras</h1>
-      <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
+      <p>O maior portal de ofertas do Brasil! Descubra as melhores oportunidades nos maiores sites de venda, com links de afiliados seguros.</p>
     </div>
   </header>
 
-  <!-- Navegação -->
   <nav role="navigation">
     <a href="index.html" aria-current="page">Promoções</a>
     <a href="cupom.html">Cupom de Desconto</a>
@@ -53,115 +48,115 @@
     <a href="contato.html">Contato</a>
   </nav>
 
-  <!-- Conteúdo principal -->
   <div class="container">
-    <!-- Botão para toggle da sidebar em mobile -->
-    <button class="sidebar-toggle" aria-controls="sidebar" aria-expanded="false">Mostrar Categorias</button>
+    <button class="sidebar-toggle" aria-controls="sidebar-categorias" aria-expanded="false">Mostrar Categorias</button>
 
-    <!-- Sidebar com categorias -->
-    <aside class="sidebar" id="sidebar" role="complementary">
+    <aside class="sidebar-categorias" id="sidebar-categorias" role="complementary">
       <h3>Categorias</h3>
       <ul role="list">
-        <li class="categoria-item ativa" data-categoria="todas" role="listitem" tabindex="0"><i class="fas fa-list"></i> Todas</li>
-        <li class="categoria-item" data-categoria="eletronicos" role="listitem" tabindex="0"><i class="fas fa-laptop"></i> Eletrônicos</li>
-        <li class="categoria-item" data-categoria="moda" role="listitem" tabindex="0"><i class="fas fa-tshirt"></i> Moda</li>
-        <li class="categoria-item" data-categoria="fitness" role="listitem" tabindex="0"><i class="fas fa-dumbbell"></i> Fitness</li>
-        <li class="categoria-item" data-categoria="casa" role="listitem" tabindex="0"><i class="fas fa-home"></i> Casa</li>
-        <!-- Outras categorias podem ser adicionadas -->
+        <li class="categoria-item ativa" data-categoria="todas" role="listitem" tabindex="0" aria-label="Filtrar por Todas as Categorias"><i class="fas fa-list"></i> Todas</li>
+        <li class="categoria-item" data-categoria="eletronicos" role="listitem" tabindex="0" aria-label="Filtrar por Eletrônicos"><i class="fas fa-laptop"></i> Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" role="listitem" tabindex="0" aria-label="Filtrar por Moda"><i class="fas fa-tshirt"></i> Moda</li>
+        <li class="categoria-item" data-categoria="fitness" role="listitem" tabindex="0" aria-label="Filtrar por Fitness"><i class="fas fa-dumbbell"></i> Fitness</li>
+        <li class="categoria-item" data-categoria="casa" role="listitem" tabindex="0" aria-label="Filtrar por Casa e Decoração"><i class="fas fa-home"></i> Casa e Decoração</li>
+        <li class="categoria-item" data-categoria="beleza" role="listitem" tabindex="0" aria-label="Filtrar por Beleza"><i class="fas fa-magic"></i> Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" role="listitem" tabindex="0" aria-label="Filtrar por Esportes"><i class="fas fa-futbol"></i> Esportes</li>
+        <li class="categoria-item" data-categoria="livros" role="listitem" tabindex="0" aria-label="Filtrar por Livros"><i class="fas fa-book"></i> Livros</li>
+        <li class="categoria-item" data-categoria="infantil" role="listitem" tabindex="0" aria-label="Filtrar por Infantil"><i class="fas fa-baby"></i> Infantil</li>
+        <li class="categoria-item" data-categoria="celulares" role="listitem" tabindex="0" aria-label="Filtrar por Celulares"><i class="fas fa-mobile-alt"></i> Celulares</li>
+        <li class="categoria-item" data-categoria="eletrodomesticos" role="listitem" tabindex="0" aria-label="Filtrar por Eletrodomésticos"><i class="fas fa-blender"></i> Eletrodomésticos</li>
       </ul>
     </aside>
 
-    <!-- Conteúdo principal -->
     <main role="main">
-      <section>
-        <h2>Ofertas do Dia</h2>
-        <!-- Anúncio do AdSense -->
-        <ins class="adsbygoogle"
-             style="display:inline-block;width:728px;height:90px"
-             data-ad-client="ca-pub-4531749081462125"
-             data-ad-slot="5690664546"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+      <section id="ofertas-section">
+        <h2 id="ofertas-titulo">Ofertas do Dia</h2>
 
-        <!-- Lojas parceiras -->
         <div class="lojas-parceiras">
           <h3>Lojas Parceiras</h3>
           <div class="grid-lojas">
-            <div class="loja-todas ativa" data-loja="todas" tabindex="0"><span>Todas as Lojas</span></div>
-            <div class="loja" data-loja="amazon" tabindex="0">
-              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
+            <div class="loja-todas ativa" data-loja="todas" role="button" tabindex="0" aria-label="Filtrar por Todas as Lojas"><span>Todas as Lojas</span></div>
+            <div class="loja" data-loja="amazon" role="button" tabindex="0" aria-label="Filtrar por Amazon">
+              <a href="https://afiliado.amazon.com.br" target="_blank" rel="noopener noreferrer">
+                <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy" width="100" height="40">
+                <span>Amazon</span>
+              </a>
             </div>
-            <div class="loja" data-loja="magalu" tabindex="0">
-              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
+            <div class="loja" data-loja="magalu" role="button" tabindex="0" aria-label="Filtrar por Magalu">
+              <a href="https://afiliado.magalu.com.br" target="_blank" rel="noopener noreferrer">
+                <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy" width="100" height="40">
+                <span>Magalu</span>
+              </a>
             </div>
-            <!-- Outras lojas podem ser adicionadas -->
+            <div class="loja" data-loja="shein" role="button" tabindex="0" aria-label="Filtrar por Shein">
+              <a href="https://afiliado.shein.com" target="_blank" rel="noopener noreferrer">
+                <img src="logos/shein.png" alt="Logo da Shein" loading="lazy" width="100" height="40">
+                <span>Shein</span>
+              </a>
+            </div>
+            <div class="loja" data-loja="shopee" role="button" tabindex="0" aria-label="Filtrar por Shopee">
+              <a href="https://afiliados.shopee.com.br" target="_blank" rel="noopener noreferrer">
+                <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy" width="100" height="40">
+                <span>Shopee</span>
+              </a>
+            </div>
+            <div class="loja" data-loja="mercadolivre" role="button" tabindex="0" aria-label="Filtrar por Mercado Livre">
+              <a href="https://afiliados.mercadolivre.com.br" target="_blank" rel="noopener noreferrer">
+                <img src="logos/mercadolivre.png" alt="Logo do Mercado Livre" loading="lazy" width="100" height="40">
+                <span>Mercado Livre</span>
+              </a>
+            </div>
+            <div class="loja" data-loja="alibaba" role="button" tabindex="0" aria-label="Filtrar por Alibaba">
+              <a href="https://affiliates.alibaba.com" target="_blank" rel="noopener noreferrer">
+                <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy" width="100" height="40">
+                <span>Alibaba</span>
+              </a>
+            </div>
           </div>
         </div>
 
-        <!-- Barra de busca -->
         <label for="busca" class="sr-only">Busque por produtos</label>
-        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca">
+        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos" aria-describedby="busca-description">
+        <span id="busca-description" class="sr-only">Digite o nome do produto para filtrar os resultados.</span>
         <div id="busca-feedback" class="busca-feedback"></div>
         <div class="loading-spinner" id="loading-spinner"></div>
-
-        <!-- Grid de produtos -->
         <div class="grid-produtos" id="grid-produtos"></div>
         <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
-        <p class="error-message" id="error-message" style="display: none;"></p>
-
-        <!-- Paginação -->
-        <div class="paginacao" id="paginacao">
-          <button id="prev-page" disabled>Anterior</button>
-          <span id="page-info">Página 1</span>
-          <button id="next-page">Próxima</button>
-        </div>
       </section>
 
-      <!-- Links sociais -->
       <div class="social-links">
-        <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer" aria-label="Siga o Centro de Compras no TikTok">
-          <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40"></div>
+        <a href="https://www.tiktok.com/@cdc.central" target="_blank" rel="noopener noreferrer" aria-label="Siga no TikTok">
+          <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="32" height="32"></div>
           <span>TikTok</span>
         </a>
-        <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer" aria-label="Siga o Centro de Compras no Instagram">
-          <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></div>
+        <a href="https://www.instagram.com/cdccentrodecompras" target="_blank" rel="noopener noreferrer" aria-label="Siga no Instagram">
+          <div class="icon"><img src="logos/instagram.png" alt="Instagram" loading="lazy" width="32" height="32"></div>
           <span>Instagram</span>
         </a>
-        <!-- Outros links sociais -->
+        <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer" aria-label="Siga no X">
+          <div class="icon"><img src="logos/x.png" alt="X" loading="lazy" width="32" height="32"></div>
+          <span>X</span>
+        </a>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdIaX" target="_blank" rel="noopener noreferrer" aria-label="Siga no YouTube">
+          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="32" height="32"></div>
+          <span>YouTube</span>
+        </a>
       </div>
 
-      <!-- WhatsApp e Telegram -->
-      <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco pelo WhatsApp">WhatsApp</a>
-      <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer" aria-label="Junte-se ao nosso canal no Telegram">Telegram</a>
+      <a class="whatsapp" href="https://wa.me/5521975179737" target="_blank" rel="noopener noreferrer" aria-label="Atendimento via WhatsApp">📱 WhatsApp</a>
+      <a class="telegram" href="https://t.me/centraldecomprascdc" target="_blank" rel="noopener noreferrer" aria-label="Canal no Telegram">📢 Telegram</a>
     </main>
   </div>
 
-  <!-- Modal para imagens -->
-  <div class="modal" id="imageModal" role="dialog" aria-modal="true" aria-label="Carrossel de imagens do produto">
-    <button class="modal-close" aria-label="Fechar modal">✕</button>
-    <div class="modal-content">
-      <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
-      <button class="carrossel-prev" aria-label="Imagem anterior">◄</button>
-      <button class="carrossel-next" aria-label="Próxima imagem">▶</button>
-      <div class="carrossel-dots" id="modalCarrosselDots"></div>
-    </div>
-  </div>
-
-  <!-- Rodapé -->
   <footer role="contentinfo">
     <p>Todos os direitos reservados <strong>Grupo Centro de Compras "CdC"</strong> © <span id="year"></span></p>
-    <p>
-      <a href="politica-privacidade.html">Política de Privacidade</a> |
-      <a href="termos-uso.html">Termos de Uso</a>
-    </p>
+    <p><a href="politica.html">Política de Compras</a> | <a href="termos.html">Termos de Uso</a></p>
   </footer>
 
-  <!-- Robô assistente -->
   <div class="robo-assistente">
-    <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco pelo WhatsApp">
+    <a href="https://wa.me/5521975179737" target="_blank" rel="noopener noreferrer" aria-label="Atendimento via WhatsApp">
       <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
-      <div class="robo-texto">Posso ajudar?</div>
+      <span class="robo-texto">Posso ajudar?</span>
     </a>
   </div>
 
