--- a/index.html
+++ b/index.html
@@ -1,165 +1,155 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
-  <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
-  <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta property="og:image" content="logos/centrodecompras.jpg">
-  <meta property="og:url" content="https://seu-site.com">
+  <meta name="google-adsense-account" content="ca-pub-4531749081462125">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
-  <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta name="twitter:image" content="logos/centrodecompras.jpg">
   <title>Centro de Compras - Ofertas do Dia</title>
-
-  <!-- Google Fonts -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
+  <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc9F5z2a/3eO0/5g3d3k9Z6H1f2Y2Z3f4g5h6j7k8l9m0n1p2q3r4t5u6v7x8y9z0==" crossorigin="anonymous" referrerpolicy="no-referrer">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+  <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png"> <!-- Favicon principal -->
+  <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png"> <!-- Favicon adicional -->
+  <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png"> <!-- Ícone para dispositivos Apple -->
+  <link rel="manifest" href="logos/site.webmanifest"> <!-- Manifesto para PWA -->
 </head>
 <body>
-  <header class="site-header" role="banner">
+  <header class="site-header">
     <div class="logo-container">
-      <a href="index.html" aria-label="Voltar para a página inicial do Centro de Compras">
-        <img src="logos/centrodecompras.jpg" alt="Logotipo do Centro de Compras" width="150" height="50" loading="lazy">
+      <a href="index.html">
+        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
       </a>
     </div>
     <div class="header-text">
-      <h1>Centro de Compras</h1>
-      <p>O maior portal de ofertas do Brasil! Descubra as melhores oportunidades nos maiores sites de venda, com links de afiliados seguros.</p>
+      <h1>Centro de Compra</h1>
+      <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
     </div>
   </header>
 
-  <nav role="navigation">
-    <a href="index.html" aria-current="page">Promoções</a>
+  <nav>
+    <a href="index.html">Promoções</a>
     <a href="cupom.html">Cupom de Desconto</a>
     <a href="sobre.html">Sobre</a>
     <a href="contato.html">Contato</a>
   </nav>
 
   <div class="container">
-    <button class="sidebar-toggle" aria-controls="sidebar-categorias" aria-expanded="false">Mostrar Categorias</button>
-
-    <aside class="sidebar-categorias" id="sidebar-categorias" role="complementary">
+    <aside class="sidebar">
       <h3>Categorias</h3>
-      <ul role="list">
-        <li class="categoria-item ativa" data-categoria="todas" role="listitem" tabindex="0" aria-label="Filtrar por Todas as Categorias"><i class="fas fa-list"></i> Todas</li>
-        <li class="categoria-item" data-categoria="eletronicos" role="listitem" tabindex="0" aria-label="Filtrar por Eletrônicos"><i class="fas fa-laptop"></i> Eletrônicos</li>
-        <li class="categoria-item" data-categoria="moda" role="listitem" tabindex="0" aria-label="Filtrar por Moda"><i class="fas fa-tshirt"></i> Moda</li>
-        <li class="categoria-item" data-categoria="fitness" role="listitem" tabindex="0" aria-label="Filtrar por Fitness"><i class="fas fa-dumbbell"></i> Fitness</li>
-        <li class="categoria-item" data-categoria="casa" role="listitem" tabindex="0" aria-label="Filtrar por Casa e Decoração"><i class="fas fa-home"></i> Casa e Decoração</li>
-        <li class="categoria-item" data-categoria="beleza" role="listitem" tabindex="0" aria-label="Filtrar por Beleza"><i class="fas fa-magic"></i> Beleza</li>
-        <li class="categoria-item" data-categoria="esportes" role="listitem" tabindex="0" aria-label="Filtrar por Esportes"><i class="fas fa-futbol"></i> Esportes</li>
-        <li class="categoria-item" data-categoria="livros" role="listitem" tabindex="0" aria-label="Filtrar por Livros"><i class="fas fa-book"></i> Livros</li>
-        <li class="categoria-item" data-categoria="infantil" role="listitem" tabindex="0" aria-label="Filtrar por Infantil"><i class="fas fa-baby"></i> Infantil</li>
-        <li class="categoria-item" data-categoria="celulares" role="listitem" tabindex="0" aria-label="Filtrar por Celulares"><i class="fas fa-mobile-alt"></i> Celulares</li>
-        <li class="categoria-item" data-categoria="eletrodomesticos" role="listitem" tabindex="0" aria-label="Filtrar por Eletrodomésticos"><i class="fas fa-blender"></i> Eletrodomésticos</li>
+      <ul>
+        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list mr-2"></i>Todas</li>
+        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt mr-2"></i>Moda</li>
+        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell mr-2"></i>Fitness</li>
+        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home mr-2"></i>Casa</li>
+        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')"><i class="fas fa-magic mr-2"></i>Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')"><i class="fas fa-futbol mr-2"></i>Esportes</li>
+        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')"><i class="fas fa-book mr-2"></i>Livros</li>
+        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')"><i class="fas fa-baby mr-2"></i>Infantil</li>
+        <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')"><i class="fas fa-mobile-alt mr-2"></i>Celulares</li>
+        <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')"><i class="fas fa-blender mr-2"></i>Eletrodomésticos</li>
+        <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')"><i class="fas fa-paw mr-2"></i>Pet</li>
+        <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')"><i class="fas fa-leaf mr-2"></i>Jardinagem</li>
+        <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')"><i class="fas fa-car mr-2"></i>Automotivo</li>
+        <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')"><i class="fas fa-utensils mr-2"></i>Gastronomia</li>
+        <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')"><i class="fas fa-gamepad mr-2"></i>Games</li>
       </ul>
     </aside>
-
-    <main role="main">
-      <section id="ofertas-section">
-        <h2 id="ofertas-titulo">Ofertas do Dia</h2>
-
-        <div class="lojas-parceiras">
-          <h3>Lojas Parceiras</h3>
-          <div class="grid-lojas">
-            <div class="loja-todas ativa" data-loja="todas" role="button" tabindex="0" aria-label="Filtrar por Todas as Lojas"><span>Todas as Lojas</span></div>
-            <div class="loja" data-loja="amazon" role="button" tabindex="0" aria-label="Filtrar por Amazon">
-              <a href="https://afiliado.amazon.com.br" target="_blank" rel="noopener noreferrer">
-                <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy" width="100" height="40">
-                <span>Amazon</span>
-              </a>
-            </div>
-            <div class="loja" data-loja="magalu" role="button" tabindex="0" aria-label="Filtrar por Magalu">
-              <a href="https://afiliado.magalu.com.br" target="_blank" rel="noopener noreferrer">
-                <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy" width="100" height="40">
-                <span>Magalu</span>
-              </a>
-            </div>
-            <div class="loja" data-loja="shein" role="button" tabindex="0" aria-label="Filtrar por Shein">
-              <a href="https://afiliado.shein.com" target="_blank" rel="noopener noreferrer">
-                <img src="logos/shein.png" alt="Logo da Shein" loading="lazy" width="100" height="40">
-                <span>Shein</span>
-              </a>
-            </div>
-            <div class="loja" data-loja="shopee" role="button" tabindex="0" aria-label="Filtrar por Shopee">
-              <a href="https://afiliados.shopee.com.br" target="_blank" rel="noopener noreferrer">
-                <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy" width="100" height="40">
-                <span>Shopee</span>
-              </a>
-            </div>
-            <div class="loja" data-loja="mercadolivre" role="button" tabindex="0" aria-label="Filtrar por Mercado Livre">
-              <a href="https://afiliados.mercadolivre.com.br" target="_blank" rel="noopener noreferrer">
-                <img src="logos/mercadolivre.png" alt="Logo do Mercado Livre" loading="lazy" width="100" height="40">
-                <span>Mercado Livre</span>
-              </a>
-            </div>
-            <div class="loja" data-loja="alibaba" role="button" tabindex="0" aria-label="Filtrar por Alibaba">
-              <a href="https://affiliates.alibaba.com" target="_blank" rel="noopener noreferrer">
-                <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy" width="100" height="40">
-                <span>Alibaba</span>
-              </a>
-            </div>
-          </div>
+<main>
+  <section>
+    <h2>🛍️ Ofertas do Dia</h2>
+    <!-- Bloco de anúncio do AdSense -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-4531749081462125"
+         data-ad-slot="5690664546"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <div class="lojas-parceiras">
+      <h3>🌟 Lojas Parceiras</h3>
+      <div class="grid-lojas">
+        <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
+        <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
+          <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
         </div>
-
-        <label for="busca" class="sr-only">Busque por produtos</label>
-        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos" aria-describedby="busca-description">
-        <span id="busca-description" class="sr-only">Digite o nome do produto para filtrar os resultados.</span>
-        <div id="busca-feedback" class="busca-feedback"></div>
-        <div class="loading-spinner" id="loading-spinner"></div>
-        <div class="grid-produtos" id="grid-produtos"></div>
-        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
-      </section>
-
-      <div class="social-links">
-        <a href="https://www.tiktok.com/@cdc.central" target="_blank" rel="noopener noreferrer" aria-label="Siga no TikTok">
-          <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="32" height="32"></div>
-          <span>TikTok</span>
-        </a>
-        <a href="https://www.instagram.com/cdccentrodecompras" target="_blank" rel="noopener noreferrer" aria-label="Siga no Instagram">
-          <div class="icon"><img src="logos/instagram.png" alt="Instagram" loading="lazy" width="32" height="32"></div>
-          <span>Instagram</span>
-        </a>
-        <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer" aria-label="Siga no X">
-          <div class="icon"><img src="logos/x.png" alt="X" loading="lazy" width="32" height="32"></div>
-          <span>X</span>
-        </a>
-        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdIaX" target="_blank" rel="noopener noreferrer" aria-label="Siga no YouTube">
-          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="32" height="32"></div>
-          <span>YouTube</span>
-        </a>
+        <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
+          <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
+        </div>
+        <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
+          <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
+        </div>
+        <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
+          <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
+        </div>
+        <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
+          <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
+        </div>
+        <div class="loja" data-lojaconforte-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
+          <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
+        </div>
       </div>
+    </div>
+    <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca">
+    <div id="busca-feedback" class="busca-feedback"></div>
+    <div class="loading-spinner" id="loading-spinner"></div>
+    <div class="grid-produtos" id="grid-produtos"></div>
+    <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
+    <p class="error-message" id="error-message" style="display: none;"></p>
+    <div class="paginacao" id="paginacao">
+      <button id="prev-page" disabled>Anterior</button>
+      <span id="page-info">Página 1</span>
+      <button id="next-page">Próxima</button>
+    </div>
+  </section>
+  <div class="social-links">
+    <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer">
+      <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40"></div>
+      <span>TikTok</span>
+    </a>
+    <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer">
+      <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></div>
+      <span>Instagram</span>
+    </a>
+    <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer">
+      <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="40" height="40"></div>
+      <span>X</span>
+    </a>
+    <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer">
+      <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></div>
+      <span>YouTube</span>
+    </a>
+  </div>
+  <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer">📲 WhatsApp</a>
+  <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer">📢 Telegram</a>
+</main>
 
-      <a class="whatsapp" href="https://wa.me/5521975179737" target="_blank" rel="noopener noreferrer" aria-label="Atendimento via WhatsApp">📱 WhatsApp</a>
-      <a class="telegram" href="https://t.me/centraldecomprascdc" target="_blank" rel="noopener noreferrer" aria-label="Canal no Telegram">📢 Telegram</a>
-    </main>
   </div>
 
-  <footer role="contentinfo">
-    <p>Todos os direitos reservados <strong>Grupo Centro de Compras "CdC"</strong> © <span id="year"></span></p>
-    <p><a href="politica.html">Política de Compras</a> | <a href="termos.html">Termos de Uso</a></p>
+  <div class="modal" id="imageModal">
+    <button class="modal-close" onclick="closeModal()">✕</button>
+    <div class="modal-content">
+      <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
+      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
+      <button class="carrossel-next" onclick="moveModalCarrossel(1)"></button>
+      <div class="carrossel-dots" id="modalCarrosselDots"></div>
+    </div>
+  </div>
+
+  <footer>
+    <p> Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
   </footer>
 
   <div class="robo-assistente">
-    <a href="https://wa.me/5521975179737" target="_blank" rel="noopener noreferrer" aria-label="Atendimento via WhatsApp">
+    <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer">
       <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
-      <span class="robo-texto">Posso ajudar?</span>
+      <div class="robo-texto">Posso ajudar?</div>
     </a>
   </div>
 
   <script defer src="script.js"></script>
 </body>
 </html>
+
